2011-05-06  Lorenzo Natale  <lorenzo.natale@iit.it>
    * src/libYARP_OS/include/yarp/os/Run.h
    * src/libYARP_OS/src/Run.cpp
    general performance optimization

2011-05-05  Lorenzo Natale  <lorenzo.natale@iit.it>
    * src/libYARP_OS/include/yarp/os/Run.h
    * src/libYARP_OS/src/Run.cpp
      removed subsequent attempts to connect to server, handle
      cases in which the server is not available

2011-05-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: rewrite rpc utility
	to use a port (without a management thread).  Add message
	resending when rpc server dies and is restarted.

	* src/libYARP_OS/src/Network.cpp: revive ability to use
	YARP without nameserver, by providing port names along
	the lines of "tcp://127.0.0.1:8888" rather than "/read".

2011-04-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/carriers/tcpros_carrier/TcpRosStream.h: add missing
	header file [thanks Giorgio Metta]

2011-04-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Log.h: stack trace to
	stderr instead of stdout, d'oh [thanks Lorenzo Natale]

2011-04-27  Lorenzo Natale  <lorenzo.natale@iit.it>

    * src/libYARP_sig/include/yarp/sig/Vector.h
    * src/libYARP_math/include/yarp/math/Math.h
    * src/libYARP_math/src/math.cpp 
    * src/libYARP_math/harness/MathTest.cpp:
    
    A bunch of changes to improve error checking on Arjan Gijsberts 
    test case involving Vector/Matrix division by scalar [thanks Arjan Gijsberts]

    made Vector(size_t c) explicit
    implemented operator/ by scalar for Vector and Matrix
    added missing operator * by scalar for Matrix
    regression tests

    
2011-04-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindFFMPEG.cmake: apply patch from Gianluca to build
	on his OSX setup [thanks Gianluca Massera]

2011-04-07  Paul Fitzpatrick  <paulfitz@farmMac1.local>

	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: make
	YARP-without-ACE work on OSX.
