@@ -1,3 +1,14 @@
+2011-05-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Port.cpp: add replyAndDrop method, to more
+	easily handle connections that may only carry one message and then
+	should terminate and close (specifically ROS XMLRPC administrative
+	messages)
+
+	* src/carriers/wire_rep_utils/WireTwiddler.h: add missing
+	string <string> header file [thanks Giovanni Saponaro]
+	[thanks Giorgio Metta]
+
 2011-05-06  Lorenzo Natale  <lorenzo.natale@iit.it>
     * src/libYARP_OS/include/yarp/os/Run.h
     * src/libYARP_OS/src/Run.cpp
